# minechat

./: .gitignore  README.md  chat.txt  chat_api.py  config.yml  main.py  minechat.history  pyproject.toml  record_chat_history.py  registration.py  send_messages.py  utils.py
src/: arg_parsers.py  chat_api.py  client.py  context_managers.py  exceptions.py  gui.py  record_chat_history.py  registration.py  send_messages.py  sender.py  utils.py
