[tool.poetry]
name = "minechat"
version = "0.1.0"
description = ""
authors = ["name@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.1"
aiofiles = "^22.1.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
